[gd_scene load_steps=4 format=3 uid="uid://c2h31uq775qp2"]

[ext_resource type="Script" path="res://main_graph_view/scripts/indicator_toggle.gd" id="1_p3lwp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wi8g1"]
bg_color = Color(1, 0.976471, 0.976471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_bolh2"]
Panel/styles/panel = SubResource("StyleBoxFlat_wi8g1")

[node name="IndicatorToggle" type="Panel" groups=["IndicatorToggle"]]
modulate = Color(0.466667, 0.447059, 0.454902, 1)
custom_minimum_size = Vector2(20, 20)
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_bolh2")
script = ExtResource("1_p3lwp")
highlightColor = Color(0.556863, 0.278431, 0, 1)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
